# vllm-omni-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: skill-loading-plan.md  v0-cli-agent-plan.md
src/vllm_omni_cli/: cli.py  config.py  model_catalog.py  recipes_sync.py
src/vllm_omni_cli/agents/: __init__.py  architect.py  coder.py  optimizer.py  reviewer.py
src/vllm_omni_cli/core/: __init__.py  agent.py  context.py  lead_agent.py  llm.py  llm_factory.py  prompts.py  react_agent.py  registry.py  request.py  skill.py  tool.py
src/vllm_omni_cli/data/: model_aliases.json  routing_rules.json
src/vllm_omni_cli/tools/: __init__.py  github.py  model_resolver.py  shell.py  vllm.py
src/vomni/: __init__.py  cli.py  config.py
src/vomni/agents/: __init__.py  optimizer.py  reviewer.py
src/vomni/core/: pipeline.py  skill.py  task.py  tool.py
src/vomni/skills/: __init__.py
src/vomni/tools/: __init__.py  github.py
tests/: test_agent.py  test_cli.py  test_config.py  test_context.py  test_lead_agent.py  test_llm_factory.py  test_model_catalog.py  test_pipeline.py  test_prompts.py  test_react_agent.py  test_request.py  test_skill.py  test_tool.py
