[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllm-omni-cli"
version = "0.1.0"
description = "Multi-agent collaboration framework for vllm-omni and HPC scenarios"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "litellm>=1.0",
    "pyyaml",
    "toml",
    "httpx",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
vllm_omni_cli = "vllm_omni_cli.cli:app"

[project.entry-points."vllm_omni_cli.tools"]

[project.entry-points."vllm_omni_cli.skills"]

[project.entry-points."vllm_omni_cli.agents"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
